<resources>
    <string name="app_name">CloudPhotoFrame</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="language">language</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="show_clock">Show clock</string>
    <string name="show_caption">Show caption</string>
    <string name="show_settings_changed_notification">Show settings changed notification</string>
    <string name="show_syncing_icon_when_photos_are_received">Show syncing icon when photos are received</string>
    <string name="show_notification_for_new_contents_received">Show notification for new contents received</string>
    <string name="show_sender_name_when_photos_are_first_received">Show sender name when photos are first received</string>
    <string name="playback_mode">Playback mode</string>
    <string name="shuffle">Shuffle</string>
    <string name="motion_sensor">Motion sensor</string>
    <string name="when_frame_goes_to_sleep">When frame goes to sleep</string>
    <string name="when_frame_wakes_up">When frame wakes up</string>
    <string name="bad_network_connectivity_mode">Bad Network Connectivity Mode</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="Set_time_zone">Set time zone</string>
    <string name="show_software_content">"\u3000\u3000\u3000"Vucatimes release software updates regularly."\n"Click \'Check for Updates\' to check for new software updates."\n""　　"This only works with an active internet connection.</string>
    <string name="system">System:</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="model">Model:</string>
    <string name="text1">This device complies with Part 15 of the FCC Rules. Operation is subject to the following two conditions:</string>
    <string name="text2">(1)this device may not cause harmful interference.</string>
    <string name="text3">(2)this device must accept any interference received, including interference that may cause undesired operation.</string>
    <string name="user_name">User Name:</string>
    <string name="serial_number">Serial Number:</string>
    <string name="frame_id">Frame ID:</string>
    <string name="firmware">Firmware:</string>
    <string name="application">Application:</string>
    <string name="revision">Revision:</string>
    <string name="fcc_id">FCC ID:</string>
    <string name="ic">IC:</string>
    <string name="ip_address">IP Address:</string>
    <string name="mac_address_wifi">MAC Address(Wifi):</string>
    <string name="download_queue_count">Download queue count:</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="password">password</string>
    <string name="Press">Press </string>
    <string name="connectzil"> on your remote to connectzil</string>
    <string name="cancel">cancel</string>
    <string name="settings">Settings</string>
    <string name="show_hide">Show"   "/"   "Hide</string>
    <string name="information">Information</string>
    <string name="advanced">Advanced</string>
    <string name="software_update">Software"   "Update</string>
    <string name="time_zone">Time"   "Zone</string>
    <string name="display_volume">Display"   "/"   "Volume</string>
    <string name="network">Network</string>
    <string name="transition_type">Transition type</string>
    <string name="transition_time">Transition time</string>
    <string name="sleep_schedule">Sleep schedule</string>


    <string name="english">English</string>
    <string name="Japan" translatable="false">日本語</string>
    <string name="Deutsch" translatable="false">Deutsch</string>
    <string name="Enfran" translatable="false">En français</string>
    <string name="espaol" translatable="false">español</string>


    <string name="rgb_color_adjustment">RGB Color Adjustment</string>
    <string name="restore_default_display_settings">Restore default display settings</string>
    <string name="set_time_zone">Set Time Zone</string>
    <string name="run_diagnostic">Run Diagnostic</string>
    <string name="hotspot_test">Hotspot Test</string>
    <string name="resync_frame">Resync Frame</string>
    <string name="drug_administration">Drug Administration</string>
    <string name="morning">Morning</string>
    <string name="remind_eat_drug_time">Remind eat drug time</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="noon">Noon</string>
    <string name="choice_morning_time">Choice morning time</string>
    <string name="choice_noon_time">Choice noon time</string>
    <string name="choice_evening_time">Choice evening time</string>
    <string name="repeat">Repeat</string>
    <string name="Volume" translatable="false">Volume</string>
    <string name="Close" translatable="false">Close</string>

    <!--guide-->
    <string name="Welcome">Welcome</string>
    <string name="LetsGetStarted">Let\'s get Started</string>
    <!--wifi-->
    <string name="WifiSetup">WiFi Setup</string>
    <string name="PleaseSelect">Please select your WiFi network</string>
    <!--pair your Frame-->
    <string name="Pair_Your_Frame">Pair Your Frame</string>
    <string name="Download">Download thie vucatimes mobile app with this QR code. Or visit https://www.myvucatimes.com/app to set up</string>
    <string name="pair">pair your frame with this serial number</string>
    <string name="please_max">Please make sure your device and frame are on the same wifi</string>

    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="cycle_sure">Determine</string>
    <string name="vibration">shock</string>
    <string name="ring">Ring tone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="comitout" translatable="false">OK</string>
    <string name="comitput" translatable="false">cancel</string>


    <string name="reboot" translatable="false">Shutdown</string>
    <string name="reboot_go" translatable="false">Shutdown...</string>

    <string name="PlayPhoto" translatable="false">Play</string>
    <string name="PlayPhotoList" translatable="false">Playlist</string>
    <string name="Settings" translatable="false">Settings</string>

    <string name="jianchaWangluo" translatable="false">Check network</string>
    <string name="jianchafuwuqi" translatable="false">Check server connection</string>
    <string name="jianchashoujilianjie" translatable="false">Check phone status</string>

    <string name="playlist" translatable="false">Playlist</string>

    <string name="freeof" translatable="false">free of</string>


    <string name="jpushaddphoto" translatable="false">Received a new photo</string>

</resources>
