<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/language_rl"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/language_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:text="@string/language"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/language_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/language_tv"
            android:layout_marginLeft="40dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_volume_rl"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/setting_volume_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="@string/volume"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_brightness_rl"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/setting_brightness_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="@string/brightness"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/restore_default_display_settings_rb"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:paddingLeft="40dp"
        android:text="@string/restore_default_display_settings"
        android:textColor="@color/radiobutton_textcolor"
        android:textSize="18sp" />


</LinearLayout>