<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intercom_full_transparent_full_black"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/run_diagnostic"
            android:textSize="25dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/NetWorkImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:background="@drawable/yes"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/NetWorkProg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="70dp"
                android:text="@string/jianchaWangluo"
                android:textSize="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ServerImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:background="@drawable/yes"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/ServerProg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="70dp"
                android:text="@string/jianchafuwuqi"
                android:textSize="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/PhotoImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:background="@drawable/yes"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/PhotoProg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="70dp"
                android:text="@string/jianchashoujilianjie"
                android:textSize="20dp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>