<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x19"
        android:gravity="center"
        android:text="@string/Pair_Your_Frame"
        android:textSize="@dimen/x18" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x10"
        android:src="@drawable/one" />

    <ImageView
        android:id="@+id/erweima"
        android:layout_width="@dimen/x80"
        android:layout_height="@dimen/x80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x8"
        android:background="@drawable/erweim_300" />

    <TextView
        android:id="@+id/modler"
        android:layout_width="@dimen/x200"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x8"
        android:gravity="center"
        android:text="@string/Download"
        android:textSize="@dimen/x8" />

    <View
        android:layout_width="@dimen/x200"
        android:layout_height="1dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:background="@color/line_and_outline_grey" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:src="@drawable/two" />


    <TextView
        android:id="@+id/pair"
        android:layout_width="@dimen/x200"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x8"
        android:gravity="center"
        android:text="@string/pair"
        android:textSize="@dimen/x8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/y9"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextSn_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttontranslucent"
            android:paddingLeft="25dp"
            android:paddingTop="12dp"
            android:paddingRight="25dp"
            android:paddingBottom="12dp"
            android:text="1000" />

        <TextView
            android:id="@+id/TextSn_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x8"
            android:background="@drawable/buttontranslucent"
            android:paddingLeft="25dp"
            android:paddingTop="12dp"
            android:paddingRight="25dp"
            android:paddingBottom="12dp"
            android:text="0000" />

        <TextView
            android:id="@+id/TextSn_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x8"
            android:background="@drawable/buttontranslucent"
            android:paddingLeft="25dp"
            android:paddingTop="12dp"
            android:paddingRight="25dp"
            android:paddingBottom="12dp"
            android:text="0000" />

        <TextView
            android:id="@+id/TextSn_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x8"
            android:background="@drawable/buttontranslucent"
            android:paddingLeft="25dp"
            android:paddingTop="12dp"
            android:paddingRight="25dp"
            android:paddingBottom="12dp"
            android:text="0000" />

    </LinearLayout>

    <TextView
        android:id="@+id/please"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/x8"
        android:text="@string/please_max" />


</LinearLayout>